--- a/Css/style.css
+++ b/Css/style.css
@@ -1,11 +1,24 @@
 .menu
 {
-    /* margin: 0% 0% 0% 0%; */
+    width: 98%;
+    margin-left: -8px;
+    margin-top: -20px;
+    padding: 1%;
     background-color: chartreuse;
-    display: inline-block;
+    position: fixed;
 }
 
-/* .menuButtons
+.menuButtons
 {
-    
-} */
+    vertical-align: middle;
+    display: inline-block;
+    border-style: solid;
+    border-width: 1px;
+    padding: 1%;
+} 
+
+.menuText
+{
+    text-decoration: none;
+    color: black;
+}
