--- a/Css/style.css
+++ b/Css/style.css
@@ -1,24 +1,81 @@
-.menu
+.top
 {
-    width: 98%;
+    margin-top: -8px;
     margin-left: -8px;
-    margin-top: -20px;
-    padding: 1%;
-    background-color: chartreuse;
-    position: fixed;
+    background-color: #00cc44; 
+    width: 101.2%;
+    padding-top: 1%;
+    vertical-align: middle;
+    text-align: center;
+    margin-bottom: 14px;
 }
 
-.menuButtons
+.logo
 {
     vertical-align: middle;
     display: inline-block;
-    border-style: solid;
-    border-width: 1px;
-    padding: 1%;
-} 
+    margin: auto;
+    width: 30%;
+    margin-left: 0px;
+}
+
+.weatherWidget
+{
+    padding-left: 10px;
+    vertical-align: middle;
+    display: inline-block;
+    margin: auto;
+    margin-right: 0px;
+}
+
+.menu
+{
+    width: 100%;
+    margin-left: -8px;
+    margin-top: -20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #00cc44;
+    position: fixed;
+    text-align: center;
+}
+
+.menuButtons
+{   
+    margin-top: 0px;
+    margin-bottom: -10px;
+    vertical-align: middle;
+    display: inline-block;
+    padding-left: 1%;
+    padding-right: 1%;
+    width: 11.85%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-weight: bold;
+}
+
+.menuButtons:hover
+{
+    background-color: #996633;
+}
+
+.menuButtons:active
+{
+    background-color: #996633;
+}
 
 .menuText
 {
+    font-family: Helvetica;
     text-decoration: none;
     color: black;
 }
+
+
+
+
+.test
+{
+    margin-top: 10%;
+}
+
