--- a/Css/style.css
+++ b/Css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300&display=swap');
 
 *{
     box-sizing: border-box;
@@ -7,16 +8,24 @@
 }
 
 li, a, .menuText{
-    font-family:'Roboto', sans-serif;
+   /* font-family:'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 500;
-    text-decoration: none;
     color: black;
+    */
+    text-decoration: none;
+    color: #fff;
+    font-family: 'Sarabun', sans-serif;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 500;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .main1{
     justify-content: space-between;
-      background-color: #ACFA58;
+    background: #333;
 }
 
 .nav_menu,li{
@@ -31,7 +40,8 @@ li, a, .menuText{
 }
 
 .nav_menu,li,a:hover{
-    color:#E6E6E6;
+    color:#81BEF7;
+    text-decoration: none;
 }
 
 .top
@@ -67,3 +77,107 @@ li, a, .menuText{
 .main2{
     font-family:'Roboto', sans-serif;
 }
+
+/*************************
+********Contact CSS*******
+**************************/
+
+.contact {
+    padding-top: 0px;
+    padding-bottom: 0;
+  }
+  
+.mapa {
+    height: none;
+  }
+  
+  .contact-us {
+
+    padding-bottom: 90px;
+  
+    font-size: 20px;
+  }
+  
+  .contact-us .heading {
+    padding-top: 15px;
+    font-size: 20px;
+  }
+  
+  .form-control {
+    background-color: transparent;
+    border-color:  rgba(255, 255, 255, 0.1);;
+    height: 50px;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 20px;
+  }
+  
+  textarea.form-control {
+    min-height: 180px;
+    resize: none;
+    font-size: 20px;
+  }
+  
+  .form-group {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  
+  .contact-info {
+    padding-left: 70px;
+    font-weight: 300;
+    font-size: 20px;
+  }
+  
+  ul.address {
+    margin-top: 30px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+  }
+  
+  .contact-info ul li {
+    margin-bottom: 8px;
+    font-size: 20px;
+  }
+  
+  .contact-info ul li a {
+    color: #fff;
+    font-size: 20px;
+  }
+  
+  .btn-submit {
+    display: block;
+    padding: 12px;
+    width: 50%;
+    color: #000;
+    border: 0;
+    font-size: 20px;
+    margin-top: 40px;
+    font-weight: bold;
+  }
+
+  .btn-submit:hover {
+      background-color: #81BEF7;
+  }
+
+/*************************
+********Footer CSS********
+**************************/
+
+footer {
+    color: #fff;
+    background-color: #333;
+    height: 200px;
+    font-family: 'Sarabun', sans-serif;
+  }
+  
+  .footer-top {
+    position: relative;
+    padding: 5px 0;
+  }
+  
+  footer .footer-bottom {
+    padding: 20px 0 10px;
+  }
