--- a/Css/style.css
+++ b/Css/style.css
@@ -1,81 +1,233 @@
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');*/
+/*@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300&display=swap');*/
+/*#7EFA4E color green*/
+/*#955121 color brown*/
+/*BTW as cores que estão agora são só um exemplo não sao as finais*/
+
+
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/*HEADER*/
+
+.header
+{
+  justify-content: space-between;
+  background: #00b33c;
+}
+
+/*Top*/
+
 .top
 {
-    margin-top: -8px;
-    margin-left: -8px;
-    background-color: #00cc44; 
-    width: 101.2%;
-    padding-top: 1%;
-    vertical-align: middle;
-    text-align: center;
-    margin-bottom: 14px;
+  width: auto;
+  padding-top: 1%;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .logo
 {
-    vertical-align: middle;
-    display: inline-block;
-    margin: auto;
-    width: 30%;
-    margin-left: 0px;
+  vertical-align: middle;
+  display: inline-block;
+  width: auto;
+}
+
+.logoIMG{
+  height: 70px;
 }
 
 .weatherWidget
 {
-    padding-left: 10px;
-    vertical-align: middle;
-    display: inline-block;
-    margin: auto;
-    margin-right: 0px;
+  vertical-align: middle;
+  display: inline-block;
 }
 
-.menu
+/*Menu*/  
+
+.menuText,li,a
 {
-    width: 100%;
-    margin-left: -8px;
-    margin-top: -20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #00cc44;
-    position: fixed;
-    text-align: center;
+  text-decoration: none;
+  color:black;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
-.menuButtons
-{   
-    margin-top: 0px;
-    margin-bottom: -10px;
-    vertical-align: middle;
-    display: inline-block;
-    padding-left: 1%;
-    padding-right: 1%;
-    width: 11.85%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+nav 
+{
+  background-color: #00b33c;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.navMenu,li
+{
+  display: inline-block;
+}
+
+.navMenu,li,a
+{
+  padding-left: 25px;
+  padding-right: 25px;
+  list-style: none;
+}
+
+.navMenu,li,a:hover
+{
+  color:#955121;
+  text-decoration: none;
+}
+
+/*MAIN*/
+
+.main
+{
+  font-family:'Roboto', sans-serif;
+}
+
+.slideshow
+{
+  margin-top: 1%;
+  margin-left: 1%;
+  width: 78%;
+  
+}
+
+.slideshowimgs
+{
+  width: 70%;
+  height: 400px;
+}
+
+.news
+{
+  width: auto;
+  float: right;
+
+}
+
+.welcome
+{
+  margin-left: 1%;
+  width: 30%;
+}
+
+/*FOOTER*/
+
+footer 
+{
+  color: #fff;
+  background-color: #333;
+  height: 260px ;
+  font-family: 'Roboto', sans-serif;
+}
+
+.footerBottom
+{
+  padding-left: 1%;
+  padding-top: 1%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*************************
+********Contact CSS*******
+**************************/
+
+.contact {
+    padding-top: 0px;
+    padding-bottom: 0;
+    
+  }
+  
+.mapa 
+{
+  height: none;
+  }
+  
+  .contact-us {
+
+    padding-bottom: 90px;
+  
+    font-size: 20px;
+  }
+  
+  .contact-us .heading {
+    padding-top: 15px;
+    font-size: 20px;
+  }
+  
+  .form-control {
+    background-color: transparent;
+    border-color:  rgba(255, 255, 255, 0.1);;
+    height: 50px;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 20px;
+  }
+  
+  textarea.form-control {
+    min-height: 180px;
+    resize: none;
+    font-size: 20px;
+  }
+  
+  .form-group {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  
+  ul.address {
+    margin-top: 30px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+  }
+  
+  .contact-info {
+    margin-bottom: 8px;
+    font-size: 15px;
+    color: #000;
+  }
+  
+  .btn-submit {
+    display: block;
+    padding: 12px;
+    width: 50%;
+    color: #000;
+    border: 0;
+    font-size: 20px;
+    margin-top: 40px;
     font-weight: bold;
-}
+  }
 
-.menuButtons:hover
-{
-    background-color: #996633;
-}
-
-.menuButtons:active
-{
-    background-color: #996633;
-}
-
-.menuText
-{
-    font-family: Helvetica;
-    text-decoration: none;
-    color: black;
-}
+  .btn-submit:hover {
+      background-color: #81BEF7;
+  }
 
 
 
-
-.test
-{
-    margin-top: 10%;
-}
-
+/**********Test**********/
