--- a/Css/style.css
+++ b/Css/style.css
@@ -13,7 +13,7 @@
 
 .header {
   justify-content: space-between;
-  background: #00b33c;
+  background: #81f781;
 }
 
 /*Top*/
@@ -55,7 +55,7 @@ a {
 }
 
 nav {
-  background-color: #00b33c;
+  background-color: #81f781;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -77,7 +77,7 @@ a {
 .navMenu,
 li,
 a:hover {
-  color: #955121;
+  color: #f5f6ce;
   text-decoration: none;
 }
 
@@ -88,18 +88,18 @@ a:hover {
 }
 
 .slideshow {
-  margin-top: 1%;
-  margin-left: 1%;
+  margin-top: 20px;
+  margin-left: 20px;
   width: 78%;
   margin: auto;
-  margin-top: 1%;
+  margin-top: 20px;
 }
 
 .slideshowGaleria {
-  margin-top: 1%;
+  margin-top: 20px;
   width: 78%;
-  margin: auto;
-  margin-top: 1%;
+  margin: 20px;
+  margin-top: 20px;
   margin-left: 22%;
 }
 
@@ -133,32 +133,17 @@ h2 {
 footer {
   color: #fff;
   background-color: #333;
-  height: 275px;
+  height: 260px;
   font-family: "Roboto", sans-serif;
   position: sticky;
   padding: 20px;
+  flex-shrink: 0;
 }
 
 /*FORM*/
 
-.contact {
-  padding-top: 0px;
-  padding-bottom: 0;
-}
-
 .mapa {
   height: none;
-}
-
-.contact-us {
-  padding-bottom: 90px;
-
-  font-size: 20px;
-}
-
-.contact-us .heading {
-  padding-top: 15px;
-  font-size: 20px;
 }
 
 .form-control {
@@ -178,14 +163,6 @@ textarea.form-control {
 
 .form-group {
   margin-bottom: 30px;
-  font-size: 20px;
-}
-
-ul.address {
-  margin-top: 30px;
-  list-style: none;
-  padding: 0;
-  margin: 0;
   font-size: 20px;
 }
 
