--- a/Css/style.css
+++ b/Css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300&display=swap");
-/*#7EFA4E color green*/ 
+/*#7EFA4E color green*/
 /*#955121 color brown*/
 /*BTW as cores que estão agora são só um exemplo não sao as finais*/
 
@@ -206,20 +206,19 @@ textarea.form-control {
 }
 
 /* contact Section */
-#contact .contact {
+.contact {
   flex-direction: column;
   max-width: 1200px;
   margin: 0 auto;
 }
-#contact .contact-items {
+.contact-items {
   width: 400px;
 }
-#contact .contact-item {
+.contact-item {
   width: 80%;
   padding: 20px;
   text-align: center;
   border-radius: 10px;
-  padding: 30px;
   margin: 30px;
   display: flex;
   justify-content: center;
@@ -228,20 +227,20 @@ textarea.form-control {
   box-shadow: 0px 0px 18px 0 #0000002c;
   transition: 0.3s ease box-shadow;
 }
-#contact .contact-item:hover {
+.contact-item:hover {
   box-shadow: 0px 0px 5px 0 #0000002c;
 }
-#contact .icon {
-  width: 70px;
+.icon {
+  width: auto;
   margin: 0 auto;
   margin-bottom: 10px;
 }
-#contact .contact-info h1 {
+.contact-info h1 {
   font-size: 2.5rem;
   font-weight: 500;
   margin-bottom: 5px;
 }
-#contact .contact-info h2 {
+.contact-info h2 {
   font-size: 1.3rem;
   line-height: 2rem;
   font-weight: 500;
