--- a/Css/style.css
+++ b/Css/style.css
@@ -85,27 +85,26 @@ a:hover {
   background-image: url(../Images/background.jpg);
   margin-top: -15px;
   padding-top: 1%;
-  color: white;
+  padding-left: 1%;
+  color: #cccccc;
+  background-size: cover;
 }
 
 .slideshow {
   margin-top: 1%;
   margin-left: 1%;
-  width: 78%;
-  margin: auto;
+  width: 98%;
   margin-top: 1%;
 }
 
 .slideshowGaleria {
   margin-top: 1%;
-  width: 78%;
-  margin: auto;
   margin-top: 1%;
   margin-left: 22%;
 }
 
 .slideshowimgs {
-  width: 70%;
+  width: 75%;
   height: 400px;
 }
 
@@ -117,9 +116,8 @@ a:hover {
 
 .welcome {
   margin-left: 1%;
-  width: 54%;
+  width: 60%;
   text-align: justify;
-  margin-left: 11%;
   font-family: "Roboto", sans-serif;
 }
 h1 {
@@ -132,88 +130,83 @@ h2 {
 
 /*FOOTER*/
 
-footer {
-  color: #fff;
-  background-color: #333;
-  height: 275px;
+footer 
+{
   font-family: "Roboto", sans-serif;
 }
 
-.footerBottom {
+.footerBottom 
+{
   padding-left: 1%;
   padding-top: 1%;
+  padding-bottom: 2%;
+  position: absolute;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
 }
 
-/*FORM*/
+.wheretofindusFooter
+{
+  float: left;
+}
 
+.contactusFooter
+{
+  margin-left: 20%;
+  float: left;
+}
+
+.openFooter
+{
+  float: right;
+  margin-right: 1%;
+}
+
+
+/*PAGE CONTATOS*/
+
+/* contact Section */
 .contact {
-  padding-top: 0px;
-  padding-bottom: 0;
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
 }
-
-.mapa {
-  height: none;
+.contact-items {
+  width: 400px;
 }
-
-.contact-us {
-  padding-bottom: 90px;
-
-  font-size: 20px;
+.contact-item {
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0px 0px 18px 0 #0000002c;
+  transition: 0.3s ease box-shadow;
 }
-
-.contact-us .heading {
-  padding-top: 15px;
-  font-size: 20px;
+.contact-item:hover {
+  box-shadow: 0px 0px 5px 0 #0000002c;
 }
-
-.form-control {
-  background-color: transparent;
-  border-color: rgba(255, 255, 255, 0.1);
-  height: 50px;
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 20px;
+.icon {
+  width: auto;
+  margin: 0 auto;
+  margin-bottom: 10px;
 }
-
-textarea.form-control {
-  min-height: 180px;
-  resize: none;
-  font-size: 20px;
+.contact-info h1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-bottom: 5px;
 }
-
-.form-group {
-  margin-bottom: 30px;
-  font-size: 20px;
+.contact-info h2 {
+  font-size: 1.3rem;
+  line-height: 2rem;
+  font-weight: 500;
 }
-
-ul.address {
-  margin-top: 30px;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  font-size: 20px;
-}
-
-.contact-info {
-  margin-bottom: 8px;
-  font-size: 15px;
-  color: #000;
-}
-
-.btn-submit {
-  display: block;
-  padding: 12px;
-  width: 50%;
-  color: #000;
-  border: 0;
-  font-size: 20px;
-  margin-top: 40px;
-  font-weight: bold;
-}
-
-.btn-submit:hover {
-  background-color: #81bef7;
-}
+/*End contact Section */
 
 /*MARCAS*/
 
