--- a/Css/style.css
+++ b/Css/style.css
@@ -49,6 +49,13 @@ a {
   font-weight: 500;
   padding-top: 2%;
   padding-bottom: 2%;
+  border-bottom: 2px solid #00b33c;
+}
+
+.menuText:hover
+{
+  border-bottom: 2px solid #955121;
+  color: #955121;
 }
 
 nav {
@@ -74,7 +81,7 @@ a {
 .navMenu,
 li,
 a:hover {
-  color: #955121;
+  color: white;
   text-decoration: none;
 }
 
