--- a/Css/style.css
+++ b/Css/style.css
@@ -1,174 +1,248 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300&display=swap");
+/*#7EFA4E color green*/
+/*#955121 color brown*/
+/*BTW as cores que estão agora são só um exemplo não sao as finais*/
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-li, a, .menuText{
-   /* font-family:'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: black;
-    */
-    text-decoration: none;
-    color: #fff;
-    font-family: 'Sarabun', sans-serif;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-weight: 500;
-    padding-top: 30px;
-    padding-bottom: 30px;
+/* header */
+
+.header {
+  justify-content: space-between;
+  background: #81f781;
 }
 
-.main1{
-    justify-content: space-between;
-    background: #333;
+/* top */
+
+.top {
+  width: auto;
+  padding-top: 1%;
+  vertical-align: middle;
+  text-align: center;
 }
 
-.nav_menu,li{
-    display: inline-block;
+.logo {
+  vertical-align: middle;
+  display: inline-block;
+  width: auto;
 }
 
-.nav_menu,li,a{
-    
-    transition: all 0.3s ease auto;
-    padding: 0px 25px;
-    list-style: none;
+.logoIMG {
+  height: 70px;
 }
 
-.nav_menu,li,a:hover{
-    color:#81BEF7;
-    text-decoration: none;
+.weatherWidget {
+  vertical-align: middle;
+  display: inline-block;
 }
 
-.top
-{
-    margin-top: -5px;
-    margin-left: -5px;
-    width: auto;
-    padding-top: 1%;
-    vertical-align: middle;
-    text-align: center;
-    margin-bottom: 14px;
+/* menu */
+
+.menuText,
+li,
+a {
+  text-decoration: none;
+  color: black;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 
-.logo
-{
-    vertical-align: middle;
-    display: inline-block;
-    margin: auto;
-    width: 30%;
-    margin-left: -20px;
+nav {
+  background-color: #81f781;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
-.weatherWidget
-{
-    padding-left: 10px;
-    vertical-align: middle;
-    display: inline-block;
-    margin: auto;
-    margin-right: 0px;
-    margin-left: 25px;
+.navMenu,
+li {
+  display: inline-block;
 }
 
-.main2{
-    font-family:'Roboto', sans-serif;
+.navMenu,
+li,
+a {
+  padding-left: 25px;
+  padding-right: 25px;
+  list-style: none;
 }
 
-/*************************
-********Contact CSS*******
-**************************/
+.navMenu,
+li,
+a:hover {
+  color: #f5f6ce;
+  text-decoration: none;
+}
 
-.contact {
-    padding-top: 0px;
-    padding-bottom: 0;
-    
-  }
-  
-.mapa {
-    height: none;
-  }
-  
-  .contact-us {
+/* main */
 
-    padding-bottom: 90px;
-  
-    font-size: 20px;
-  }
-  
-  .contact-us .heading {
-    padding-top: 15px;
-    font-size: 20px;
-  }
-  
-  .form-control {
-    background-color: transparent;
-    border-color:  rgba(255, 255, 255, 0.1);;
-    height: 50px;
-    border-radius: 0;
-    box-shadow: none;
-    font-size: 20px;
-  }
-  
-  textarea.form-control {
-    min-height: 180px;
-    resize: none;
-    font-size: 20px;
-  }
-  
-  .form-group {
-    margin-bottom: 30px;
-    font-size: 20px;
-  }
-  
-  ul.address {
-    margin-top: 30px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
-  }
-  
-  .contact-info {
-    margin-bottom: 8px;
-    font-size: 15px;
-    color: #000;
-  }
-  
-  .btn-submit {
-    display: block;
-    padding: 12px;
-    width: 50%;
-    color: #000;
-    border: 0;
-    font-size: 20px;
-    margin-top: 40px;
-    font-weight: bold;
-  }
+.main {
+  font-family: "Roboto", sans-serif;
+}
 
-  .btn-submit:hover {
-      background-color: #81BEF7;
-  }
+.slideshow {
+  margin-top: 20px;
+  margin-left: 20px;
+  width: 78%;
+  margin: auto;
+  margin-top: 20px;
+}
 
-/*************************
-********Footer CSS********
-**************************/
+.slideshowGaleria {
+  margin-top: 20px;
+  width: 78%;
+  margin: 20px;
+  margin-top: 20px;
+  margin-left: 22%;
+}
+
+.slideshowimgs {
+  width: 70%;
+  height: 400px;
+}
+
+.news {
+  width: auto;
+  float: right;
+}
+
+.welcome {
+  margin-left: 1%;
+  width: 54%;
+  text-align: justify;
+  margin-left: 11%;
+  font-family: "Roboto", sans-serif;
+}
+h1 {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+h2 {
+  font-size: large;
+}
+
+/* footer */
 
 footer {
-    color: #fff;
-    background-color: #333;
-    height: 310px;
-    font-family: 'Sarabun', sans-serif;
-  }
-  
-  .footer-top {
-    position: relative;
-    padding: 5px 0;
-  }
-  
-  footer .footer-bottom {
-    padding: 20px 0 10px;
-  }
+  font-family: "Roboto", sans-serif;
+}
+
+.footerBottom {
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 2%;
+  position: absolute;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+}
+
+.wheretofindusFooter {
+  float: left;
+}
+
+.contactusFooter {
+  margin-left: 20%;
+  float: left;
+}
+
+.openFooter {
+  float: right;
+  margin-right: 20px;
+}
+
+/* form */
+
+.mapa {
+  height: none;
+}
+
+.form-control {
+  background-color: #fff;
+  border-color: #a4a4a4;
+  height: 50px;
+  border-radius: 20px;
+  box-shadow: none;
+  font-size: 20px;
+}
+
+textarea.form-control {
+  min-height: 180px;
+  resize: none;
+  font-size: 20px;
+}
+
+.form-group {
+  margin-bottom: 30px;
+  font-size: 20px;
+}
+
+.contact-info {
+  color: #000;
+}
+
+.contact-a:hover {
+  color: #81f781;
+}
+
+.contact-address {
+  float: right;
+  margin-left: 4%;
+  width: 35.3333%;
+}
+
+.btn {
+  width: 160px;
+  margin: 20px;
+  font-size: 18px;
+}
+
+/* contactos */
+
+.contact {
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.contact-items {
+  width: 400px;
+}
+.contact-item {
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0px 0px 18px 0 #0000002c;
+  transition: 0.3s ease box-shadow;
+}
+.contact-item:hover {
+  box-shadow: 0px 0px 5px 0 #0000002c;
+}
+.icon {
+  width: auto;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+.contact-info h1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+.contact-info h2 {
+  font-size: 1.3rem;
+  line-height: 2rem;
+  font-weight: 500;
+}
+/*End contact Section */
