--- a/Css/style.css
+++ b/Css/style.css
@@ -49,6 +49,11 @@ a {
   font-weight: 500;
   padding-top: 2%;
   padding-bottom: 2%;
+  
+}
+
+.menuText
+{
   border-bottom: 2px solid #00b33c;
 }
 
@@ -78,7 +83,6 @@ a {
   list-style: none;
 }
 
-.navMenu,
 li,
 a:hover {
   color: white;
@@ -93,7 +97,7 @@ a:hover {
   margin-top: -15px;
   padding-top: 1%;
   padding-left: 1%;
-  color: #cccccc;
+  color: white;
   background-size: cover;
 }
 
