--- a/Css/style.css
+++ b/Css/style.css
@@ -50,8 +50,8 @@ a {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   font-weight: 500;
-  padding-top: 30px;
-  padding-bottom: 10px;
+  /* padding-top: 1%; */
+  /* padding-bottom: 10px; */
 }
 
 .menuText {
@@ -119,6 +119,22 @@ a:hover {
 .news {
   width: auto;
   float: right;
+  margin-right: 1%;
+}
+
+.marcas
+{
+  text-align: center;
+  display: inline-block;
+  width: 140%;
+  margin-left: -130px;
+}
+
+.marca
+{
+  display: inline-block;
+  width: auto;
+  vertical-align: middle;
 }
 
 .welcome {
@@ -128,6 +144,7 @@ a:hover {
   margin-left: 11%;
   font-family: "Roboto", sans-serif;
 }
+
 h1 {
   font-size: 1.5em;
   font-weight: bold;
@@ -238,11 +255,7 @@ textarea.form-control {
 .contact-item:hover {
   box-shadow: 0px 0px 5px 0 #0000002c;
 }
-.icon {
-  width: auto;
-  margin: 0 auto;
-  margin-bottom: 10px;
-}
+
 .contact-info h1 {
   font-size: 2.5rem;
   font-weight: 500;
