--- a/Css/style.css
+++ b/Css/style.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 /* header */
@@ -38,6 +39,11 @@
 .weatherWidget {
   vertical-align: middle;
   display: inline-block;
+  
+}
+
+.weatherWidgetTablet {
+  visibility: hidden
 }
 
 /* menu */
@@ -300,3 +306,531 @@ textarea.form-control {
   font-weight: 500;
 }
 /*End contact Section */
+
+@media only screen and (max-width: 992px) { /*Tablet*/
+  
+  /* header */
+  
+  .header {
+    background: #81f781;
+  }
+  
+  /* top */
+  
+  .top {
+    width: 100%;
+    padding-top: 1%;
+    vertical-align: middle;
+    text-align: center;
+  }
+  
+  .logo {
+    vertical-align: middle;
+    display: inline-block;
+    width: auto;
+  }
+  
+  .logoIMG {
+    height: 70px;
+  }
+  
+  .weatherWidget {
+    visibility: hidden;
+  }
+
+  .weatherWidgetTablet {
+    vertical-align: middle;
+    display: inline-block;
+    visibility: visible;
+    margin-top: -15%;
+
+  }
+  
+  /* menu */
+
+  .menuText,
+  li,
+  a {
+    text-decoration: none;
+    color: black;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
+  
+  .menuText {
+    border-bottom: 2px solid #81f781;
+  }
+  
+  .menuText:hover {
+    border-bottom: 2px solid #fff;
+    color: #fff;
+  }
+  
+  nav {
+    background-color: #81f781;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    padding-left: 1%;
+    margin-top: -4%;
+  }
+
+  .navMenu,
+  li {
+    display: inline-block;
+  }
+  
+  .navMenu,
+  li,
+  a {
+    padding-left: 2px;
+    padding-right: 2px;
+    list-style:none;
+    text-align: center;
+  }
+  
+  .navMenu,
+  li,
+  a:hover {
+    color: #f5f6ce;
+    text-decoration: none;
+  }
+  
+  /* main */
+  
+  .slideshow {
+    margin-left: 20px;
+    width: 78%;
+    margin: auto;
+    margin-top: 20px;
+  }
+  
+  .slideshowGaleria {
+    margin-top: 20px;
+    width: 78%;
+    margin: 20px;
+    margin-top: 20px;
+    margin-left: 22%;
+  }
+  
+  .slideshowimgs {
+    width: 70%;
+    height: 400px;
+  }
+  
+  .news {
+    width: auto;
+    float: right;
+    margin-right: 1%;
+    visibility: hidden;
+    position: absolute;
+  }
+  
+  .marcas
+  {
+    text-align: center;
+    display: inline-block;
+    /* width: 100%;
+    margin-left: -130px; */
+  }
+  
+  .marca
+  {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+  
+  /*********Marcas da pagina marcas*/
+  .marcasI
+  {
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+   
+  }
+  
+  .marcaI
+  {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+  /*******************/
+  
+  .welcome {
+    margin-left: 1%;
+    width: 54%;
+    text-align: justify;
+    margin-left: 11%;
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .gallery
+  {
+    width: 110%;
+    background-color: red;
+  }
+  
+  .photo
+  {
+    border-radius: 10px;
+    border: 2px white solid;
+    background-color: black;
+    display: inline-block;
+    width: 33%;
+    height: 300px;
+  }
+  
+  h1 {
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  h2 {
+    font-size: large;
+  }
+  
+  /* footer */
+  
+  footer {
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .footerBottom {
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 2%;
+    position: absolute;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .wheretofindusFooter {
+    float: left;
+  }
+  
+  .contactusFooter {
+    margin-left: 20%;
+    float: left;
+  }
+  
+  .openFooter {
+    float: right;
+    margin-right: 20px;
+  }
+  
+  /* form */
+  
+  .mapa {
+    height: none;
+  }
+  
+  .form-control {
+    background-color: #fff;
+    border-color: #a4a4a4;
+    height: 50px;
+    border-radius: 20px;
+    box-shadow: none;
+    font-size: 20px;
+  }
+  
+  textarea.form-control {
+    min-height: 180px;
+    resize: none;
+    font-size: 20px;
+  }
+  
+  .form-group {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  
+  .contact-info {
+    color: #000;
+  }
+  
+  .contact-a:hover {
+    color: #81f781;
+  }
+  
+  .contact-address {
+    float: right;
+    margin-left: 4%;
+    width: 35.3333%;
+  }
+  
+  .btn {
+    width: 160px;
+    margin: 20px;
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 600px) { /*Phone*/
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* header */
+  
+  .header {
+    justify-content: space-between;
+    background: #81f781;
+  }
+  
+  /* top */
+  
+  .top {
+    width: auto;
+    padding-top: 1%;
+    vertical-align: middle;
+    text-align: center;
+  }
+  
+  .logo {
+    vertical-align: middle;
+    display: inline-block;
+    width: auto;
+  }
+  
+  .logoIMG {
+    height: 70px;
+  }
+  
+  .weatherWidget {
+    vertical-align: middle;
+    display: inline-block;
+    visibility: hidden;
+  }
+
+
+  
+  /* menu */
+  
+  .menuText,
+  li,
+  a {
+    text-decoration: none;
+    color: black;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
+  
+  .menuText {
+    border-bottom: 2px solid #81f781;
+  }
+  
+  .menuText:hover {
+    border-bottom: 2px solid #fff;
+    color: #fff;
+  }
+  
+  nav {
+    background-color: #81f781;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+  }
+  
+  .navMenu,
+  li {
+    display: inline-block;
+  }
+  
+  .navMenu,
+  li,
+  a {
+    padding-left: 25px;
+    padding-right: 25px;
+    list-style: none;
+  }
+  
+  .navMenu,
+  li,
+  a:hover {
+    color: #f5f6ce;
+    text-decoration: none;
+  }
+  
+  /* main */
+  
+  .main {
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .slideshow {
+    margin-left: 20px;
+    width: 78%;
+    margin: auto;
+    margin-top: 20px;
+  }
+  
+  .slideshowGaleria {
+    margin-top: 20px;
+    width: 78%;
+    margin: 20px;
+    margin-top: 20px;
+    margin-left: 22%;
+  }
+  
+  .slideshowimgs {
+    width: 70%;
+    height: 400px;
+  }
+  
+  .news {
+    width: auto;
+    float: right;
+    margin-right: 1%;
+  }
+  
+  .marcas
+  {
+    text-align: center;
+    display: inline-block;
+    width: 140%;
+    margin-left: -130px;
+  }
+  
+  .marca
+  {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+  
+  /*********Marcas da pagina marcas*/
+  .marcasI
+  {
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+   
+  }
+  
+  .marcaI
+  {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+  /*******************/
+  
+  .welcome {
+    margin-left: 1%;
+    width: 54%;
+    text-align: justify;
+    margin-left: 11%;
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .gallery
+  {
+    width: 110%;
+    background-color: red;
+  }
+  
+  .photo
+  {
+    border-radius: 10px;
+    border: 2px white solid;
+    background-color: black;
+    display: inline-block;
+    width: 33%;
+    height: 300px;
+  }
+  
+  h1 {
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  h2 {
+    font-size: large;
+  }
+  
+  /* footer */
+  
+  footer {
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .footerBottom {
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 2%;
+    position: absolute;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .wheretofindusFooter {
+    float: left;
+  }
+  
+  .contactusFooter {
+    margin-left: 20%;
+    float: left;
+  }
+  
+  .openFooter {
+    float: right;
+    margin-right: 20px;
+  }
+  
+  /* form */
+  
+  .mapa {
+    height: none;
+  }
+  
+  .form-control {
+    background-color: #fff;
+    border-color: #a4a4a4;
+    height: 50px;
+    border-radius: 20px;
+    box-shadow: none;
+    font-size: 20px;
+  }
+  
+  textarea.form-control {
+    min-height: 180px;
+    resize: none;
+    font-size: 20px;
+  }
+  
+  .form-group {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  
+  .contact-info {
+    color: #000;
+  }
+  
+  .contact-a:hover {
+    color: #81f781;
+  }
+  
+  .contact-address {
+    float: right;
+    margin-left: 4%;
+    width: 35.3333%;
+  }
+  
+  .btn {
+    width: 160px;
+    margin: 20px;
+    font-size: 18px;
+  }
+}
+
