--- a/Css/style.css
+++ b/Css/style.css
@@ -14,7 +14,7 @@
 
 .header {
   justify-content: space-between;
-  background: #156e1b;
+  background: #00b300;
 }
 
 /* top */
@@ -59,7 +59,7 @@
 }
 
 .menuText {
-  border-bottom: 2px solid #156e1b;
+  border-bottom: 2px solid #00b300;
   text-decoration: none;
   color: black;
   font-family: "Roboto", sans-serif;
@@ -85,7 +85,7 @@ a {
 }
 
 nav {
-  background-color: #156e1b;
+  background-color: #00b300;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -112,7 +112,7 @@ a:hover {
 .main {
   font-size: 14px;
   text-align: justify;
-  background-color: #156e1b;
+  background-color: #00b300;
 }
 
 .slideshow {
@@ -126,7 +126,6 @@ a:hover {
 
 .news {
   float: right;
-  /* background-color: #156e1b; */
   width: 23%;
 }
 
@@ -361,7 +360,7 @@ textarea.form-control {
   /* header */
 
   .header {
-    background: #156e1b;
+    background: #00b300;
   }
 
   /* top */
@@ -407,7 +406,7 @@ textarea.form-control {
   }
 
   .menuText {
-    border-bottom: 2px solid #156e1b;
+    border-bottom: 2px solid #00b300;
     text-decoration: none;
     color: black;
     font-family: "Roboto", sans-serif;
@@ -423,7 +422,7 @@ textarea.form-control {
   }
 
   nav {
-    background-color: #156e1b;
+    background-color: #00b300;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -605,7 +604,7 @@ textarea.form-control {
 
   .header {
     justify-content: space-between;
-    background: #156e1b;
+    background: #00b300;
   }
 
   /* top */
@@ -680,7 +679,7 @@ textarea.form-control {
   }
 
   .menuText {
-    border-bottom: 2px solid #156e1b;
+    border-bottom: 2px solid #00b300;
   }
 
   .menuText:hover {
@@ -689,7 +688,7 @@ textarea.form-control {
   }
 
   nav {
-    background-color: #156e1b;
+    background-color: #00b300;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
